# pyTelegramBotApiWrapper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
telebot_wrapper/: __init__.py  bot.py  utils.py
